# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1150 2010-02-04 22:33:54 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2010/02/01) Added Kernel::System::Cache::FileStorable backend module for
    Kernel::System::Cache which is working with binary for dump and eval of
    perl data structures (a little bit faster the dump/eval in pure perl).
    Perl's Storable module is included in perl distibution it self.
 - (2010/01/26) IPC session backend (Kernel::System::AuthSession::IPC) is not
    longer supported. Increased performance of DB and FS backend (only sync
    session data to storage at end of a session).
 - (2010/01/25) Added agent preferences for max. shown tickets a page in
    ticket overviews.
 - (2010/01/19) Added security feature enhancement to block active elements
    and external images as auto load of html articles in zoom view (agent
    and customer interface).
 - (2010/01/15) Fixed bug#4651 - Dashboard upcoming events does not look up
    statetypes for Pending Reminder.
 - (2010/01/14) Removed not needed tool scripts/sync_node.sh.
 - (2010/01/13) Added ticket fulltext search to dashboard.
 - (2010/01/06) Added dashboard widget for displaying external content via iframe.
 - (2009/12/31) Added cpan module for JSON support (version 2.16), removed JSON
    function from LayoutAJAX and changed all function calls to the new JSON
    wrapper.
 - (2009/12/24) Themes are now stored in SysConfig under Frontend::Themes rather
    than in the database. This to enable administrators to add a new theme by
    just modifying SysConfig instead of having to use mysql or isql or so.
 - (2009/12/23) Renamed inconsistent module name Kernel::System::Config to
    Kernel::System::SysConfig.